	- Added option for town respawn to only happen when the player dies in the same world as the spawn point.
	- Added option for a town to open it's gates and let players join without needing to be invited.
	  /town join [town] (Console: town join [resident] [town]). (Open) is shown in the town's status as well as in '/town list'.
	  To set a town as open '/town toggle open'.
	- New Lang: msg_err_already_in_town, msg_changed_open, msg_toggle_open_on_warning, msg_err_not_open
	
	***** WARNING BACKUP YOUR CHANNEL SETTINGS AS THEY WILL BE WIPED *****
	
	- Moved all chat settings to townyChat's own 'ChatConfig.yml' and removed all remaining chat functions from Towny.
v0.78.0.13:
	- Updated to support Dev CraftBukkit for 1.1 with new event system.
	- Updated minimum CraftBukkit version to 1792.
	- Implement new Bukkit event system supporting new GroupManager and PEX (if they update).
v0.78.0.14:
	- Fix for new installs failing to create a new config due to a bukkit bug in getMapList.
	- Fix for handling GM System Events.
v0.78.0.15:
	- Fixed Error reporting when trying to add a non resident as a town assistant.
	- Fix flag war to correctly observe it's config enable setting.
v0.78.0.16:
	- Fix for my fix for the Bukkit bug mentioned in 0.78.0.14.
v0.78.0.17:
	- Fixed an error on Setting player modes caused by Bukkit passing null objects.
	- Fixed Upkeep plot payments to pay on the current size of the town.
	- Fix PEX out of date message.
	- Trap errors for GM/PEX events we don't want to track.
v0.78.0.18:
	- plot_management block_delete items are now queued and processed one TownBlock at a time, upon a Town unclaiming a plot.
	- New Day code has been returned to an Asyncronous thread now that the block delete has it's own queue.
	- Added a new config setting for town open status of new towns 'default_open' in 'Town Claim/new defaults'.